# privmx-endpoint

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  CodeStyle.md  README.md  RELEASING.md  build-clang.sh  build-with-streams.sh  build.sh  conanfile-dev.py  conanfile.txt  doc-gen.sh  doxygen.config  recv.sh  recv_orig.sh  sender.sh
crypto/: CMakeLists.txt
crypto/base/: CMakeLists.txt
crypto/base/src/: BIP39.cpp  CryptoPrivmx.cpp  EciesEncryptor.cpp  OpenSSLUtils.cpp  PasswordMixer.cpp  SRP.cpp  SrpLogic.cpp
crypto/driver/src/: CryptoEnv.cpp  CryptoService.cpp
crypto/emscripten/src/: Bindings.cpp  CryptoEnv.cpp  CryptoService.cpp
crypto/openssl/src/: CryptoEnv.cpp  CryptoService.cpp
crypto/test_programs/: cryptotest.cpp
endpoint/: CMakeLists.txt
endpoint/android/: CMakeLists.txt
endpoint/android/src/: EndpointAndroidCInterface.cpp
endpoint/core/: CMakeLists.txt
endpoint/core/cinterface/: CMakeLists.txt
endpoint/core/src/: BackendRequester.cpp  Config.cpp  Connection.cpp  ConnectionImpl.cpp  ContainerKeyCache.cpp  ContextProvider.cpp  DataEncryptorV4.cpp  DataInnerEcnryptorV4.cpp  EndpointCoreCInterface.cpp  EndpointUtils.cpp  EventChannelManager.cpp  EventMiddleware.cpp  EventQueue.cpp  EventQueueImpl.cpp  EventVarSerializer.cpp  Events.cpp  ExceptionConverter.cpp  Factory.cpp  HandleManager.cpp  InternalContextEventManager.cpp  KeyIdFormatValidator.cpp  KeyProvider.cpp  Mapper.cpp  ModuleBaseApi.cpp  ServerApi.cpp  SingletonsHolder.cpp  Subscriber.cpp  SubscriberImpl.cpp  SubscriptionHelper.cpp  TimestampValidator.cpp  TypeValidator.cpp  UserVerifier.cpp  UsersKeysResolver.cpp  Utils.cpp  Validator.cpp  VarDeserializer.cpp  VarSerializer.cpp
endpoint/crypto/: CMakeLists.txt
endpoint/crypto/cinterface/: CMakeLists.txt
endpoint/crypto/src/: CryptoApi.cpp  CryptoApiImpl.cpp  CryptoVarSerializer.cpp  EndpointCryptoCInterface.cpp  ExtKey.cpp  ExtKeyVarSerializer.cpp  KeyConverter.cpp
endpoint/event/: CMakeLists.txt
endpoint/event/src/: EndpointEventCInterface.cpp  EventApi.cpp  EventApiImpl.cpp  EventKeyProvider.cpp  EventVarSerializer.cpp  Events.cpp  ServerApi.cpp  SubscriberImpl.cpp  VarDeserializer.cpp  VarSerializer.cpp
endpoint/group/: CMakeLists.txt
endpoint/group/src/: GroupApi.cpp  GroupApiImpl.cpp  ServerApi.cpp
endpoint/inbox/: CMakeLists.txt
endpoint/inbox/cinterface/: CMakeLists.txt
endpoint/inbox/src/: EndpointInboxCInterface.cpp  Events.cpp  Factory.cpp  FileKeyIdFormatValidator.cpp  InboxApi.cpp  InboxApiImpl.cpp  InboxCache.cpp  InboxDataHelper.cpp  InboxDataProcessorV4.cpp  InboxEntriesDataEncryptorSerializer.cpp  InboxHandleManager.cpp  InboxProvider.cpp  InboxVarDeserializer.cpp  InboxVarSerializer.cpp  MessageKeyIdFormatValidator.cpp  ServerApi.cpp  SubscriberImpl.cpp  VarDeserializer.cpp  VarSerializer.cpp
endpoint/interface/: CMakeLists.txt
endpoint/interface/event/: CMakeLists.txt
endpoint/interface/inbox/: CMakeLists.txt
endpoint/interface/src/: EndpointCInterface.cpp
endpoint/interface/store/: CMakeLists.txt
endpoint/interface/thread/: CMakeLists.txt
endpoint/kvdb/: CMakeLists.txt
endpoint/kvdb/cinterface/: CMakeLists.txt
endpoint/kvdb/src/: EndpointKvdbCInterface.cpp  Events.cpp  KvdbApi.cpp  KvdbApiImpl.cpp  KvdbProvider.cpp  KvdbValidator.cpp  KvdbVarDeserializer.cpp  KvdbVarSerializer.cpp  Mapper.cpp  ServerApi.cpp  SubscriberImpl.cpp  VarDeserializer.cpp  VarSerializer.cpp
endpoint/programs/: CLI_README.md
endpoint/programs/benchmark/: CMakeLists.txt  PerformanceTester.cpp  createTable.sh  env.sh  main.cpp
endpoint/programs/privmxcli/: CMakeLists.txt  main.cpp
endpoint/programs/search_bench/: CMakeLists.txt  README.md  SearchBenchCli.cpp  SearchBenchCli.hpp  SearchBenchHelpers.cpp  SearchBenchHelpers.hpp  SearchBenchProfiler.cpp  SearchBenchProfiler.hpp  SearchBenchRuntime.cpp  SearchBenchRuntime.hpp  SearchBenchSuites.cpp  SearchBenchSuites.hpp  bridge-env.sh  common_words_500.txt  list-indexes.sh  main.cpp  multiuser-test.sh  run-multiuser.sh  run-perf-remote.sh  run-perf.sh  run-remote.sh  run.sh  suites-multiuser.sh  suites-remote.sh  suites.sh
endpoint/programs/stream_testing/: CMakeLists.txt  echo_test.cpp  example_video.cpp  single_video_receiver.cpp  single_video_reciver.cpp  single_video_sender.cpp  streams_program.cpp  streams_program_1.cpp  streams_program_2.cpp  streams_program_3.cpp  streams_program_3_b.cpp  streams_program_3_receiver_orig.cpp  streams_program_3_reciver.cpp  streams_program_3_sender.cpp  streams_program_4.cpp  streams_program_5.cpp
endpoint/programs/streams-sample/: CMakeLists.txt
endpoint/search/: CMakeLists.txt
endpoint/search/src/: FullTextSearch.cpp  LockSession.cpp  LockSetLogic.cpp  PrivmxFS.cpp  PrivmxSqliteVFS.cpp  SearchApi.cpp  SearchApiImpl.cpp  VarDeserializer.cpp  VarSerializer.cpp
endpoint/sql/: CMakeLists.txt
endpoint/store/: CMakeLists.txt
endpoint/stream/: CMakeLists.txt
endpoint/tests_e2e/: CMakeLists.txt
endpoint/thread/: CMakeLists.txt
examples/Threads-interactive/: .env  .env2  CMakeLists.txt  README.md  conanfile.txt  main.cpp  utils.cpp  utils.hpp
examples/using-inboxes/: CMakeLists.txt  README.md  main.cpp
examples/using_Kvdb/: CMakeLists.txt  README.md  build.sh  conanfile.txt  main.cpp
privfs/: CMakeLists.txt
privfs/test/: main.cpp
rpc/: CMakeLists.txt
rpc/base/: CMakeLists.txt
test/: CMakeLists.txt  README.md  compose.yaml  e2e_runner.py  requirements.txt
test/tests/: CoreModuleEventsTest.cpp  CoreTest.cpp  CryptoTest.cpp  EventsTest.cpp  InboxModuleEventsTest.cpp  InboxTest.cpp  KvdbModuleEventsTest.cpp  KvdbTest.cpp  SearchTest.cpp  SqlTest.cpp  StoreModuleEventsTest.cpp  StoreTest.cpp  StreamEventsTest.cpp  StreamLowTest.cpp  StreamTest.cpp  ThreadModuleEventsTest.cpp  ThreadTest.cpp  UtilsTest.cpp
test/utils/: BaseTest.hpp  Main.hpp  env.sh  startTest.sh
utils/: CMakeLists.txt
utils/src/: BinaryBuffer.cpp  CancellationToken.cpp  Debug.cpp  Executor.cpp  GuardedExecutor.cpp  IniFIleReader.cpp  Utils.cpp  VersionNumber.cpp
utils/test/: VersionNumber.cpp
(+4052 files in other folders)
