file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
if(BUILD_SHARED_LIBS)
    add_library(privmx SHARED ${SOURCES})
else()
    add_library(privmx STATIC ${SOURCES})
endif()
target_include_directories(privmx PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_compile_options(privmx PRIVATE -fPIC -Wall -Wextra -Wno-narrowing)
target_link_libraries(privmx PUBLIC Poco::Foundation Poco::JSON Pson privmxutils privmxcrypto privmxrpc)

install(TARGETS privmx DESTINATION lib)
if(PRIVMX_INSTALL_PRIVATE_HEADERS)
    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/privmx DESTINATION include)
endif()
if(PRIVMX_WERROR)
    target_compile_options(privmx PRIVATE -Werror)
endif()

if(PRIVMX_ENABLE_TESTS)
    include(FindGTest)
    include(GoogleTest)
    enable_testing()
    find_package(GTest REQUIRED)
    file(GLOB_RECURSE TESTS_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/test/*.cpp)
    add_executable(privmxprivfs_test ${TESTS_SOURCES})
    target_link_libraries(privmxprivfs_test PUBLIC Poco::Foundation Poco::JSON Pson privmx GTest::GTest GTest::Main)
    gtest_add_tests(TARGET privmxprivfs_test)
endif()
