# file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
# add_library(privmxcrypto OBJECT ${SOURCES})
# target_include_directories(privmxcrypto PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
# target_compile_options(privmxcrypto PRIVATE -Wall -Wextra -Wno-narrowing)
# target_link_libraries(privmxcrypto PUBLIC Poco::Foundation Poco::Crypto OpenSSL::Crypto gmp privmxutils)
# if(BUILD_SHARED_LIBS)
#     set_target_properties(privmxcrypto PROPERTIES POSITION_INDEPENDENT_CODE True)
# endif()
# install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/privmx DESTINATION include)
# if(PRIVMX_WERROR)
#     target_compile_options(privmxcrypto PRIVATE -Werror)
# endif()

# if(PRIVMX_ENABLE_TESTS)
#     include(FindGTest)
#     include(GoogleTest)
#     enable_testing()
#     find_package(GTest REQUIRED)
#     file(GLOB_RECURSE TESTS_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/test/*.cpp)
#     add_executable(privmxcrypto_test ${TESTS_SOURCES})
#     target_link_libraries(privmxcrypto_test PUBLIC Poco::Foundation Poco::JSON Pson privmx GTest::GTest GTest::Main)
#     gtest_add_tests(TARGET privmxcrypto_test)
# endif()
