file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
set(INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include)
set(INCLUDE_PUB_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include_pub)

if(BUILD_SHARED_LIBS)
    add_library(privmxendpointinbox SHARED ${SOURCES})
else()
    add_library(privmxendpointinbox STATIC ${SOURCES})
endif()
target_include_directories(privmxendpointinbox PUBLIC ${INCLUDE_DIRS} PUBLIC ${INCLUDE_PUB_DIRS})
target_compile_options(privmxendpointinbox PRIVATE -fPIC -Wall -Wextra -Wno-narrowing)
target_link_libraries(privmxendpointinbox PRIVATE Poco::Foundation privmx privmxendpointcore privmxendpointstore privmxendpointthread)
if(BUILD_SHARED_LIBS)
    set_target_properties(privmxendpointinbox PROPERTIES POSITION_INDEPENDENT_CODE True)
endif()
install(TARGETS privmxendpointinbox DESTINATION lib)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include_pub/privmx DESTINATION include)
if(PRIVMX_INSTALL_PRIVATE_HEADERS)
    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/privmx DESTINATION include)
endif()
if(PRIVMX_WERROR)
    target_compile_options(privmxendpointinbox PRIVATE -Werror)
endif()
set_target_properties(privmxendpointinbox PROPERTIES COMPILE_DEFINITIONS "MINIMAL_BUILD")