file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
set(INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_BINARY_DIR}/include)

if(BUILD_SHARED_LIBS)
    add_library(privmxendpointinterface SHARED ${SOURCES})
else()
    add_library(privmxendpointinterface STATIC ${SOURCES})
endif()
target_include_directories(privmxendpointinterface PUBLIC ${INCLUDE_DIRS})
target_compile_options(privmxendpointinterface PRIVATE -fPIC -Wall -Wextra -Wno-narrowing)
target_link_libraries(privmxendpointinterface PUBLIC Poco::Foundation privmx privmxendpointcore privmxendpointcrypto privmxendpointthread privmxendpointstore privmxendpointinbox privmxendpointevent privmxendpointkvdb)
if(BUILD_SHARED_LIBS)
    set_target_properties(privmxendpointinterface PROPERTIES POSITION_INDEPENDENT_CODE True)
endif()
install(TARGETS privmxendpointinterface DESTINATION lib)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/privmx DESTINATION include)
if(PRIVMX_WERROR)
    target_compile_options(privmxendpointinterface PRIVATE -Werror)
endif()
